--- a/README.me
+++ b/README.me
@@ -7,3 +7,5 @@ this project was to compare different methods for cross-validation that
 can be use to validate the amount of principal components in a 
 PCA-Analysis
 
+Link to the rendered final report : http://htmlpreview.github.io/?https://github.com/evandieren/CV-for-PCA/blob/main/final_proj.html
+
